<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:id="@+id/llHeader"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:padding="10dp">
            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/icon_back" />
            <TextView
                android:layout_gravity="center"
                android:id="@+id/tvName"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:gravity="center"
                android:text="dsd"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            app:layout_constraintTop_toBottomOf="@id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/llContinue">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:text="@string/base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/llAddress"
                        android:gravity="center_vertical"
                        android:layout_margin="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/background_edittext">
                        <ImageView
                            android:layout_marginStart="20dp"
                            android:src="@drawable/icon_bag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvAddress"
                            android:textSize="16dp"
                            android:layout_marginStart="20dp"
                            android:hint="@string/select_address"
                            android:layout_width="270dp"
                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:src="@drawable/icon_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llTotalDate"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/date"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:id="@+id/llDate"
                        android:gravity="center_vertical"
                        android:layout_margin="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/background_edittext">
                        <ImageView
                            android:layout_marginStart="20dp"
                            android:src="@drawable/icon_calendar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvDate"
                            android:textSize="16dp"
                            android:layout_marginStart="20dp"
                            android:hint="@string/select_date"
                            android:layout_width="270dp"
                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:src="@drawable/icon_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llTotalHour"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="20dp"
                        android:textColor="@color/black"
                        android:text="@string/hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/llHour"
                        android:gravity="center_vertical"
                        android:layout_margin="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/background_edittext">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/icon_alarm" />
                        <TextView
                            android:id="@+id/tvHour"
                            android:textSize="16dp"
                            android:layout_marginStart="20dp"
                            android:hint="@string/select_hour"
                            android:layout_width="270dp"
                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:src="@drawable/icon_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llTotalPerson"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="20dp"
                        android:textColor="@color/black"
                        android:text="@string/customes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/llFilePerson"
                        android:gravity="center_vertical"
                        android:layout_margin="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/background_edittext">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/icon_account" />
                        <TextView
                            android:id="@+id/tvCustomer"
                            android:textSize="16dp"
                            android:layout_marginStart="20dp"
                            android:hint="@string/select_customers"
                            android:layout_width="270dp"
                            android:layout_height="wrap_content"/>
                        <ImageView

                            android:src="@drawable/icon_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llTotalNote"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="20dp"
                        android:textColor="@color/black"
                        android:text="@string/note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_margin="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/background_edittext"
                        >


                        <EditText
                            android:gravity="center_vertical"
                            android:textSize="16dp"
                            android:layout_marginStart="20dp"
                            android:hint="Tình trạng bệnh"
                            android:layout_width="270dp"
                            android:layout_height="match_parent"
                            android:background="@null"/>


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/llContinue"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/colorTextSecondary"
                android:text="@string/btn_continue"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>